# BiologicalRecords

./: .gitignore  __init__.py  app.py  auth.py  create_roles.py  main.py  models.py  pyproject.toml  run.py  test_database_import.py  unmatched_records_20260316_152550.csv
app/: __init__.py  main.py  models.py  records.py
app/static/css/: style.css
app/templates/: admin_dashboard.html  home.html  login.html
migrations/versions/: 501466aa9a91_update_schema.py  c153fb1a2f5a_initial_migration.py
static/js/: trustcode.js
templates/: home.html  index.html  login.html  register.html
